# fragment-mnp

./: .buildinfo  .gitignore  CHANGELOG.md  CITATION.cff  CNAME  CONTRIBUTING.md  LICENSE  README.md  _environment.yml  advanced-usage.html  config.html  coverage.xml  dissolution-mineralisation.html  environment.yaml  environment.yml  example-usage.html  fragment_mnp.py  fragmentation-dissolution-rates.html  genindex.html  input-data.html  intro.html  objects.inv  paper.bib  paper.md  plotting.html  py-modindex.html  pyproject.toml  references.html  search.html  searchindex.js  test.ipynb
Duke_eco/: plastic_dict
_modules/: index.html
_sources/: config.md  dissolution-mineralisation.ipynb  example-usage.ipynb  fragmentation-dissolution-rates.ipynb  input-data.md  intro.md  plotting.ipynb
advanced-usage/: fragment-size-distribution.html  fragmentation-rate.html  numerical-instability.html
api/: examples.html  model.html  output.html  validation.html
developers/: api.html  conda.html  docs.html  quickstart.html
doc/: conda.md  example-usage.ipynb  model-config.md
docs/: _config.yml  _toc.yml  advanced-usage.md  config.ipynb  config.md  dissolution-mineralisation.ipynb  example-usage.ipynb  fragmentation-dissolution-rates.ipynb  input-data.ipynb  input-data.md  intro.md  model-config.md  plotting.ipynb  references.bib  requirements.txt
notebooks/: simple-fragmentation-model-demo.ipynb  simple-fragmentation-model.ipynb
paper/: paper.bib  paper.md
tests/: _mass_balance.py  _mock_output.py  test_model.py  test_output.py  test_plotting.py  test_validation.py
(+26 files in other folders)
