[tool.poetry]
name = "fragmentmnp"
version = "0.0.1"
description = "Model of microplastic degradation and fragmentation in the environment"
authors = ["Sam Harrison <samharrison.xg@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/microplastics-cluster/fragment-mnp"

[tool.poetry.dependencies]
python = "~3.9"
scipy = "^1.8.0"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
schema = "^0.7.5"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.1"
ipykernel = "^6.13.0"
ipywidgets = "^7.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
