[tool.poetry]
name = "fragmentmnp"
version = "1.0.0"
description = "Model of microplastic degradation and fragmentation in the environment"
authors = ["Sam Harrison <samharrison.xg@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/microplastics-cluster/fragment-mnp"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scipy = "^1.8.0"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
schema = "^0.7.5"
plotly = "^5.8.0"
pandas = "^1.4.2"
Pillow = ">=9.1.1"
ipykernel = "^6.16.2"
jupyter-core = ">=4.11.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
ipykernel = "^6.13.0"
ipywidgets = "^7.7.0"
jupyter-book = "^0.12.3"
notebook = ">=6.4.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
